# testing-language-server

./: .testingls.toml  Cargo.toml  LICENSE  README.md  rustfmt.toml
demo/: .assert-lsp.toml
demo/.helix/: languages.toml
src/: adapter_main.rs  config.rs  error.rs  lib.rs  log.rs  main.rs  protocol.rs  runner.rs  server.rs  spec.rs  workspace.rs
src/adapter/: model.rs
src/adapter/runner/: cargo_nextest.rs  cargo_test.rs  deno.rs  go.rs  jest.rs  mod.rs  node_test.rs  phpunit.rs  util.rs  vitest.rs
src/go/: call.rs  discover.scm  mod.rs  parse.rs
src/javascript/: call.rs  discover_deno.scm  discover_jest.scm  discover_node_test.scm  mod.rs  parse.rs
src/php/: call.rs  discover.scm  mod.rs  parse.rs
src/rust/: call.rs  discover.scm  mod.rs  parse.rs
tests/: client.rs  go-test.txt  lsp_integration.rs  no_config.rs  with_config.rs
