[package]
name = "testing-language-server"
version = "0.1.12"
edition = "2021"
description = "LSP server for testing with integrated adapters"
license = "MIT"

[lints.clippy]
pedantic = "warn"

[[bin]]
name = "testing-language-server"
path = "src/main.rs"

[[bin]]
name = "testing-ls-adapter"
path = "src/adapter_main.rs"

[dependencies]
lsp-types = "0.95.1"
serde_json = "1.0.116"
serde = "1.0.198"
thiserror = "1.0.59"
regex = "1.10.4"
tracing-appender = "0.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", default-features = false }
dirs = "5.0.1"
clap = { version = "4.5.4", features = ["derive"] }
once_cell = "1.19.0"
strum = { version = "0.26.2", features = ["derive"] }
glob = "0.3.1"
globwalk = "0.9.1"
chrono = "0.4.38"
toml = "0.8.19"
which = "6.0"

# Tree-sitter parsers for test discovery
tree-sitter = "0.22.5"
tree-sitter-rust = "0.21.2"
tree-sitter-javascript = "0.21.0"
tree-sitter-go = "0.21.0"
tree-sitter-php = "0.22.5"

# For PHPUnit XML parsing
xml-rs = "0.8.21"

[dev-dependencies]
tempfile = "3.10.1"
