[package]
authors = ["Willem Vanhulle <willemvanhulle@protonmail.com>"]
description = "See failed tests as diagnostic messages next to your test code."
edition = "2024"
exclude = ["/demo/", "/.vim/", "/.github/"]
keywords = ["language-server", "testing", "javascript", "php", "go"]
license = "MIT"
name = "assert-lsp"
repository = "https://github.com/wvhulle/assert-lsp"
version = "0.0.1"

[lints.clippy]
cast_possible_truncation = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
pedantic = { level = "warn", priority = -1 }

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11"
ignore = "0.4"
log = "0.4"
lsp-server = "0.7.8"
lsp-types = "0.95.1"
once_cell = "1.19.0"
regex = "1.10.4"
serde = "1.0.198"
serde_json = "1.0.116"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.59"
toml = "0.8.19"
which = "6.0"

# Tree-sitter parsers for test discovery
tree-sitter = "0.22.5"
tree-sitter-go = "0.21.0"
tree-sitter-javascript = "0.21.0"
tree-sitter-php = "0.22.5"
tree-sitter-rust = "0.21.2"

# For PUnit XML parsing
crossbeam-channel = "0.5.15"
xml-rs = "0.8.21"

[dev-dependencies]
tempfile = "3.10.1"
